[gd_scene load_steps=4 format=3 uid="uid://dxxthvoifbby0"]

[ext_resource type="Script" path="res://assets/scenes/UI/HUD/HUD.gd" id="1_kugdh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcxx7"]
bg_color = Color(0.294118, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.458824, 0.458824, 0.458824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ckm5k"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[node name="Hud" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kugdh")

[node name="gameOver" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -741.5
offset_top = -353.5
offset_right = 741.5
offset_bottom = 353.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.168627)

[node name="gameover" type="Label" parent="gameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -610.0
offset_top = -1.5
offset_right = 611.0
offset_bottom = 305.5
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.247059, 0.188235, 1)
theme_override_font_sizes/font_size = 225
text = "Game Over"

[node name="Score" type="Label" parent="gameOver"]
layout_mode = 0
offset_left = 19.5
offset_top = 340.5
offset_right = 313.5
offset_bottom = 477.5
theme_override_font_sizes/font_size = 100
text = "Score:
"

[node name="scoreValue" type="Label" parent="gameOver/Score"]
layout_mode = 0
offset_left = 304.0
offset_top = 1.0
offset_right = 1384.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 100
text = "0"

[node name="retry" type="Button" parent="gameOver"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -543.0
offset_top = -166.5
offset_right = -32.0
offset_bottom = -21.5
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_right = NodePath("../quit")
focus_next = NodePath("../quit")
theme_override_font_sizes/font_size = 100
text = " Try Again "

[node name="quit" type="Button" parent="gameOver"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 73.0
offset_top = -166.5
offset_right = 584.0
offset_bottom = -21.5
grow_horizontal = 2
grow_vertical = 0
focus_previous = NodePath("../retry")
theme_override_font_sizes/font_size = 100
text = " Quit Game "

[node name="pause" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -741.5
offset_top = -353.5
offset_right = 741.5
offset_bottom = 353.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.168627)

[node name="paused" type="Label" parent="pause"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -610.0
offset_top = -1.5
offset_right = 611.0
offset_bottom = 305.5
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.247059, 0.188235, 1)
theme_override_font_sizes/font_size = 225
text = " Paused "
horizontal_alignment = 1

[node name="Score" type="Label" parent="pause"]
layout_mode = 0
offset_left = 19.5
offset_top = 340.5
offset_right = 313.5
offset_bottom = 477.5
theme_override_font_sizes/font_size = 100
text = "Score:
"

[node name="scoreValue" type="Label" parent="pause/Score"]
layout_mode = 0
offset_left = 304.0
offset_top = 1.0
offset_right = 1384.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 100
text = "0"

[node name="resume" type="Button" parent="pause"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -543.0
offset_top = -166.5
offset_right = -32.0
offset_bottom = -21.5
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_right = NodePath("../quit")
focus_next = NodePath("../quit")
theme_override_font_sizes/font_size = 100
text = " Resume "

[node name="quit" type="Button" parent="pause"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 73.0
offset_top = -166.5
offset_right = 584.0
offset_bottom = -21.5
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../resume")
theme_override_font_sizes/font_size = 100
text = " Quit Game "

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 376.0
offset_bottom = 143.0
color = Color(1, 1, 1, 0.266667)

[node name="healthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 26.0
offset_right = 321.0
offset_bottom = 53.0
theme_override_styles/background = SubResource("StyleBoxFlat_vcxx7")
theme_override_styles/fill = SubResource("StyleBoxFlat_ckm5k")
max_value = 3.0
step = 1.0
value = 3.0
show_percentage = false

[node name="Health" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 26.0
offset_right = 95.0
offset_bottom = 49.0
text = "Health:"

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 81.0
offset_right = 95.0
offset_bottom = 104.0
text = "Score:
"

[node name="scoreValue" type="Label" parent="Score"]
layout_mode = 0
offset_left = 57.0
offset_top = 1.0
offset_right = 325.0
offset_bottom = 24.0
text = "0"

[connection signal="pressed" from="gameOver/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="gameOver/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="pause/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pause/quit" to="." method="_on_quit_pressed"]
